--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.5.1",
     "axios": "^0.27.2",
+    "apollo-server-express": "^3.10.0",
     "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
@@ -27,6 +29,9 @@
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.9",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0"
   }
 }
